fix ImageModal layout problem, add transform on hover to .image-card class

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -300,7 +300,7 @@ html {
     pointer-events: none;
     -webkit-transform: translate(0,0);
     transform: translate(0,0);
-    max-width: 700px;
+    max-width: 800px;
     margin: auto;
 }
 
@@ -338,17 +338,36 @@ html {
   border-top-right-radius: .3rem;
 }
 
+.my-example {
+  position: relative;
+  border-width: .2rem;
+  max-height: calc(100vh - 200px);
+  overflow: auto;
+}
+
 .modal-body {
-  padding: 1.5rem;
+  /* padding: 1.5rem;
     margin-right: 0;
     margin-left: 0;
     border-width: .2rem;
-    border: solid #f7f7f9;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-height: calc(100vh - 200px);
+    border: solid #f7f7f9; */
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    /* justify-content: space-between; */
+    /* max-height: calc(100vh - 200px);
     overflow-y: auto;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1rem; */
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: .2rem;
 }
 
 .modal-footer {
@@ -363,4 +382,34 @@ html {
   justify-content: flex-end;
   padding: 1rem;
   border-top: 1px solid #e9ecef;
+}
+
+.image-card {
+  position: relative;
+  /* display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; */
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  cursor: pointer;
+  /* flex-direction: column; */
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+}
+
+.image-card:hover {
+  transform: scale(1.01)
+}
+
+.image {
+  height: 160px;
+  width: 100%;
+  display: block;
+  /* vertical-align: middle; */
+    border-style: none;
 }
